--- a/MOSSArt/MOSSArt.csproj
+++ b/MOSSArt/MOSSArt.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{B2AEFB9E-DF84-4F58-B36C-0B3BBCB6FF9C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PorterWang</RootNamespace>
-    <AssemblyName>PorterWang</AssemblyName>
+    <RootNamespace>MOSSArt</RootNamespace>
+    <AssemblyName>MOSSArt</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -44,9 +44,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
